@@ -3,6 +3,8 @@
 	* src/seahorse.desktop.in:
 	* plugins/nautilus/seahorse-pgp-preferences.desktop.in: 
 	Corrected desktop files (Bug #328457). Patch by Stephane Loeuillet.
+	* src/seahorse-key-op.c: Backport patch by Adam Schreiber
+ 	Bug #328471
 	
 2006-01-18  Nate Nielsen  <nielsen@memberwebs.com>
 
